# RaythmDemo

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
assets/charts/00001/: 00001.json  1627802685.mc
docs/: 开发日志.md  开发计划.md
docs/savedprompt/Gemini/: 如何vibecoding.md  如何进行架构设计.md  音游开发：格式与同步优化 .json
docs/savedprompt/local/: 01_核心技术栈文档编写.md  03_配置_CMake_vcpkg.md  04_环境配置测试.md
docs/savedprompt/local/基础设施搭建与测试/: 01_SDL窗口类基础封装与测试.md  02_玩法开发计划初步规划.md  03_阶段8初步任务分配.md  04_铺面转换器工具搭建与测试.md
docs/savedprompt/local/环境配置与测试/: 02_system_prompts初始化.md  03_配置_CMake_vcpkg_vscode.md  04_环境配置测试.md
docs/技术设计文档/: 核心技术选型.md
docs/玩法设计文档/: 游戏配置定义.md  玩法定义.md  谱面文件格式定义.md
include/Audio/: AudioEngine.hpp
include/Core/: Application.hpp  GameplayRuntimeDriver.hpp  Time.hpp
include/Game/: Chart.hpp  ChartLoader.hpp  GameConstants.hpp  GameplaySession.hpp  GameplaySnapshot.hpp  GameplayView.hpp  LaneInput.hpp
include/Platform/: EventPump.hpp  InputState.hpp  Window.hpp
include/Render/: RenderStrategy.hpp  Renderer.hpp
src/: main.cpp  miniaudio_impl.cpp
src/Audio/: AudioEngine.cpp
src/Core/: Application.cpp  GameplayRuntimeDriver.cpp  Time.cpp
src/Game/: ChartLoader.cpp  GameplaySession.cpp  GameplayView.cpp  LaneInput.cpp
src/Platform/: EventPump.cpp  InputState.cpp  Window.cpp
src/Render/: RenderStrategy.cpp  Renderer.cpp
tests/: audio_test.cpp  core_gameplay_runtime_test.cpp  core_test.cpp  environment_test.cpp  game_test.cpp  gameplay_session_test.cpp  input_state_test.cpp  render_strategy_test.cpp  render_test.cpp  test_mc_to_chart_json.py  window_test.cpp
tools/: mc_to_chart_json.py
